# MagicX

./: SoftEngine
MagicX/doc/: 新建 Microsoft Word 文档.docx
MagicX/examples/Demo/: Demo.sln
MagicX/include/: CDriver.h  mx.h
MagicX/include/common/: CSingleton.h  mxDef.h  mxMath.h
MagicX/include/core/: aabb3d.h  coreutil.h  matrix44.h  plane3d.h  quaternion.h  vector2d.h  vector3d.h
MagicX/include/driver/: CMXRenderDriver.h
MagicX/resource/media/: 1.tga  front.tga
MagicX/resource/shader/: skybox.frg  terrain.frg  terrain.ver  test.frg  test.ver
MagicX/resource/texture/: back.tga  grass.tga  land.tga  snow.tga
MagicX/source/: CDriver.cpp
MagicX/source/driver/: CMXRenderDriver.cpp
MagicX2.0/component/device/: CEventManager.cpp  CEventManager.h  CKeyEvent.cpp  CKeyEvent.h
MagicX2.0/component/render/: CMaterial.h  CRenderList.cpp  CRenderList.h  CShaderProgram.h
MagicX2.0/component/resource/: CMesh.cpp  CMesh.h  CPLXLoader.cpp  CPLXLoader.h
MagicX2.0/component/scene/: CCamera.cpp  CCamera.h  CEntity.h  CObject.cpp  CObject.h  CRandomTerrain.h  CRondomTerrain.cpp  CScene.cpp  CScene.h  CSceneNode.cpp  CSceneNode.h  CSkyBox.cpp  CSkyBox.h
MagicX2.0/doc/: 3D流水线.doc  3D裁剪.doc  MagicX使用文档.docx  MagicX框架.doc  数学基础知识.docx  碎片.docx  笔记.docx
MagicX2.0/examples/Demo/: Demo.vcxproj  Demo.vcxproj.filters  generator.cpp  generator.h  main.cpp
MagicX2.0/include/: IReferenceCount.h  mx.h  mxDef.h  mxType.h
MagicX2.0/include/core/: CBoundingBox.h  CFrustum.h  CMatrix4.h  CPlane3.h  CQuaternion.h  CSingleton.h  CVector2.h  CVector3.h
MagicX2.0/include/device/: EEvent.h  IDevice.h  IDeviceDriver.h  IKeyEvent.h
MagicX2.0/include/render/: ERender.h  EStandShader.h  IBufferObject.h  IGPUBuffer.h  IRenderDriver.h  IRenderableObject.h  IRenderer.h  IShader.h  IShaderProgram.h  ITerrainTextureGenerator.h  ITexture.h  SColor.h  SVertexAttribute.h
MagicX2.0/include/resource/: Attribute.h  CLoaderManager.h  CMeshManager.h  CResourceManager.h  IImage.h  IMesh.h  IResource.h  IResourceLoader.h  Polygon.h
MagicX2.0/include/scene/: CEntity.h  CMeshNode.h  CMeshNodeManager.h  CSceneManager.h  CSphereMeshNode.h  ICamera.h  IObject.h  IScene.h  ISceneNode.h  ISkyBox.h  ITerrain.h  IWater.h
MagicX2.0/resource/: terrainmap.tga
MagicX2.0/resource/plg/: house.plg
MagicX2.0/resource/shader/: terrain.ver
MagicX2.0/resource/texture/: cloud.tga  left.tga  right.tga  top.tga
MagicX2.0/source/: mx.cpp
MagicX2.0/source/device/: CEventManager.cpp
MagicX2.0/source/resource/: CLoaderManager.cpp  (+2 more)
MagicX2.0/tools/: gpu.txt
MagicX3.0/: readme.txt
MagicX3.0/doc/: 引擎文档.docx  结构.vsd
MagicX3.0/include/: IMagicX.h  mx.h  mxDef.h  mxType.h
MagicX3.0/lib/: glew32.lib  glew32d.lib  glew32s.lib
MagicX3.0/source/: CMagicX.cpp  CMagicX.h  main.cpp  mx.cpp
MagicX4.0/: CMakeLists.txt
MagicX4.0/component/: CMakeLists.txt
MagicX4.0/component/base/: CAABBox.cpp  CMakeLists.txt
MagicX4.0/component/devicewin/: CDeviceWin.cpp  CDeviceWin.h  CKeyEvent.cpp  CKeyEvent.h  CMakeLists.txt
MagicX4.0/component/glrender/: CGLDriverWin.cpp  CGLDriverWin.h  CGLRenderer.cpp  CGLRenderer.h  CMakeLists.txt  GLDebug.h
MagicX4.0/component/glrender/glew/: glew.c
MagicX4.0/component/resource/: CMakeLists.txt  CResourceManager.cpp  CResourceManager.h
MagicX4.0/component/scene/: CMakeLists.txt  CSceneManager.cpp  CSceneManager.h
MagicX4.0/example/0.test/: test.c
MagicX4.0/example/1.triangle/: CMakeLists.txt  Triangle.cpp
MagicX4.0/include/: CMXDriver.h  CMagicX.h  mx.h  mxConfig.h
MagicX4.0/include/base/: CAABBox.h  CSingleton.h  color.h  mallocdef.h  math.h  matrix.h  typedef.h  vector.h
MagicX4.0/include/device/: CEventManager.h  EEvent.h  IDevice.h  IEvent.h
MagicX4.0/include/render/: IRenderer.h  RenderDef.h
MagicX4.0/include/resource/: IResourceManager.h
MagicX4.0/include/scene/: IScene.h  ISceneManager.h
MagicX4.0/source/: CMXDriver.cpp  CMagicX.cpp  mxConfig.h.in
MagicX4.0/source/device/: CEventManager.cpp
MagicX4.0/source/devicewin/: CDeviceWin.cpp  CDeviceWin.h  CMakeLists.txt
MagicX4.0/source/glrender/: CGLDriverWin.cpp  CGLDriverWin.h  CGLRenderer.cpp  CGLRenderer.h
MagicX4.0/source/resource/: CResourceManager.h
MagicX4.0/source/scene/: CSceneManager.cpp  CSceneManager.h
Maigic4.0/: ReadMe.txt
SoftEngine/: CMakeLists.txt
SoftEngine/doc/: SoftEngine.pptx  SoftwareRender.pptx
SoftEngine/inc/: CSoftEngine.h
SoftEngine/src/: CSoftEngine.cpp  main.cpp
SoftwareGraphEngine/: CMakeLists.txt
SoftwareGraphEngine/doc/: 需要深入学习.txt
SoftwareGraphEngine/inc/: camera.h  config.h  draw.h  light.h  material.h  parser.h  plx.h  polygon.h  renderer.h  sge.h  sgemath.h  tool.h  typedef.h
SoftwareGraphEngine/lib/: freeglut.lib  freeglut_static.lib  freeglut_staticd.lib  freeglutd.exp  freeglutd.lib
SoftwareGraphEngine/resource/shader/: common.frag  common.vert
SoftwareGraphEngine/src/: camera.cpp  draw.cpp  light.cpp  main.cpp  material.cpp  parser.cpp  plx.cpp  polygon.cpp  renderer.cpp  sgemath.cpp  tool.cpp  winmain.cpp  winmain_2.cpp
(+737 files in other folders)
